replace b.i.o with biocpp

--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,9 @@
 [submodule "lib/b.i.o."]
 	path = lib/b.i.o.
 	url = https://github.com/eseiler/b.i.o..git
+[submodule "lib/biocpp-core"]
+	path = lib/biocpp-core
+	url = https://github.com/biocpp/biocpp-core.git
+[submodule "lib/biocpp-io"]
+	path = lib/biocpp-io
+	url = https://github.com/biocpp/biocpp-io.git
