--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,13 +8,12 @@ if (NOT DEFINED PROJECT_NAME)
     if(WIN32)
         set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /bigobj /EHsc")
     else()
-#        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Werror -pedantic")
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Werror -pedantic")
     endif()
     set(ROOT_PROJECT TRUE)
 else()
     set(ROOT_PROJECT FALSE)
 endif ()
-
 
 project(IVio)
 
@@ -23,8 +22,9 @@ add_subdirectory(src/ivio)
 if (${ROOT_PROJECT})
     find_package (fmt REQUIRED)
 
-#    add_subdirectory(lib/Catch2)
-    enable_testing()
-
+    add_subdirectory(lib/Catch2)
     add_subdirectory(docs/snippets)
+
+    enable_testing()
+    add_subdirectory(src/test_ivio)
 endif()
