--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
       fail-fast: false
       matrix:
         osname: ["Ubuntu 22.04"]
-        compiler: ["gcc12 (c++20)", "gcc11 (c++20)", "gcc10 (c++20)", "gcc12 (c++20, Debug)"]
+        compiler: ["gcc12 (c++20)", "gcc11 (c++20)", "gcc10 (c++20)", "gcc12 (c++20, Debug)", "clang15"]
 
         include:
           - osname: "Ubuntu 22.04"
@@ -55,6 +55,11 @@ jobs:
             build_type: Debug
             brew_pkgs: gcc@12
 
+          - compiler: "clang15"
+            cxx: "clang++"
+            cc: "clang"
+            build_type: Release
+            brew_pkgs: llvm@15
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
