--- a/docs/snippets/CMakeLists.txt
+++ b/docs/snippets/CMakeLists.txt
@@ -9,3 +9,4 @@ function(test_snippet file_base_name params)
 endfunction()
 
 test_snippet("read_vcf.cpp" "${CMAKE_CURRENT_SOURCE_DIR}/data/vcf.vcf")
+test_snippet("fasta_example_01.cpp" "${CMAKE_CURRENT_SOURCE_DIR}/data/demo.fa")
