--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ if (NOT DEFINED PROJECT_NAME)
     if(WIN32)
         set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /bigobj /EHsc")
     else()
-        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Werror -pedantic")
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Werror -Wpedantic -fPIC")
     endif()
     set(ROOT_PROJECT TRUE)
 else()
@@ -17,14 +17,21 @@ endif ()
 
 project(IVio)
 
+option(PYTHON_BINDINGS "compile python bindings" OFF)
+
 add_subdirectory(src/ivio)
 
-if (${ROOT_PROJECT})
-    find_package (fmt REQUIRED)
+if (${PYTHON_BINDINGS})
+    add_subdirectory(lib/pybind11)
+    add_subdirectory(src/iviopy)
+else()
+    if (${ROOT_PROJECT})
+        find_package (fmt REQUIRED)
 
-    add_subdirectory(lib/Catch2)
+        add_subdirectory(lib/Catch2)
 
-    enable_testing()
-    add_subdirectory(docs/snippets)
-    add_subdirectory(src/test_ivio)
+        enable_testing()
+        add_subdirectory(docs/snippets)
+        add_subdirectory(src/test_ivio)
+    endif()
 endif()
