fix: add brew lib path if using g++-10

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -76,6 +76,11 @@ jobs:
           brew install --force-bottle zlib boost cmake fmt pkg-config ${{ matrix.brew_pkgs }}
           ${{ matrix.cxx }} --version
 
+      - name: Force brew package
+        run: |
+          echo 'export LIBRARY_PATH=/home/linuxbrew/.linuxbrew/lib' >> ${HOME}/.activate_brew
+        if: matrix.compiler == 'gcc10 (c++20)'
+
       - name: Tool versions
         run: |
           source ${HOME}/.activate_brew
