--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,9 +2,10 @@ site_name: IVio
 docs_dir: docs
 nav:
   - index.md
-  - python-bindings.md
   - C++ API-Reference:
     - formats.md
+  - Python:
+    - python-bindings.md
 use_directory_urls: false
 theme:
   name: readthedocs
