--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,9 +2,11 @@ site_name: IVio
 docs_dir: docs
 nav:
   - index.md
+  - benchmarks.md
   - C++ API-Reference:
-    - formats.md
-  - Python:
+    - "formats-fasta.md"
+    - "formats-vcf.md"
+  - Python API-Reference:
     - python-bindings.md
 use_directory_urls: false
 theme:
