--- a/src/test_ivio/CMakeLists.txt
+++ b/src/test_ivio/CMakeLists.txt
@@ -6,6 +6,7 @@ project(test_ivio)
 add_executable(${PROJECT_NAME}
     main.cpp
     fasta_reader.cpp
+    fasta_writer.cpp
 )
 target_link_libraries(${PROJECT_NAME}
     Catch2::Catch2
