test: unit tests for vcf reader

--- a/src/test_ivio/CMakeLists.txt
+++ b/src/test_ivio/CMakeLists.txt
@@ -7,6 +7,7 @@ add_executable(${PROJECT_NAME}
     main.cpp
     fasta_reader.cpp
     fasta_writer.cpp
+    vcf_reader.cpp
 )
 target_link_libraries(${PROJECT_NAME}
     Catch2::Catch2
