--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -25,9 +25,9 @@ markdown_extensions:
 #  - admonition
 #  - codehilite:
 #      use_pygments: true
-#  - toc:
-#      permalink: true
-#      separator: "_"
+  - toc:
+      permalink: true
+      separator: "_"
 #  - sane_lists
 #  - smarty
   - pymdownx.highlight:
