--- a/.gitmodules
+++ b/.gitmodules
@@ -20,3 +20,6 @@
 	path = lib/pybind11
 	url = https://github.com/pybind/pybind11.git
 	branch = v2.10.4
+[submodule "lib/seqtk"]
+	path = lib/seqtk
+	url = https://github.com/lh3/seqtk.git
