fix: specify githubref manually

--- a/.github/workflows/ci_coverage.yml
+++ b/.github/workflows/ci_coverage.yml
@@ -30,8 +30,9 @@ jobs:
             compiler: "gcc12 (c++20)"
             cxx: "g++-12"
             cc: "gcc-12"
-            build_type: Release
-            brew_pkgs: gcc@12
+            gcov: "gcov-12"
+            build_type: Debug
+            brew_pkgs: gcc@12 lcov
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
@@ -46,7 +47,7 @@ jobs:
           eval "$(/home/linuxbrew/.linuxbrew/bin/brew shellenv)"
           sudo apt-get update -y
           sudo apt-get install -y build-essential libfmt-dev
-          brew install --force-bottle zlib boost cmake fmt pkg-config gcovr ${{ matrix.brew_pkgs }}
+          brew install --force-bottle zlib boost cmake fmt pkg-config ${{ matrix.brew_pkgs }}
           ${{ matrix.cxx }} --version
 
       - name: Force brew package
@@ -59,6 +60,9 @@ jobs:
           source ${HOME}/.activate_brew
           cmake --version
           ${{ matrix.cxx }} --version
+          lcov --version
+          which lcov
+          find /home/linuxbrew/.linuxbrew
 
       - name: Configure tests
         env:
@@ -67,7 +71,7 @@ jobs:
         run: |
           source ${HOME}/.activate_brew
           mkdir ivio-build && cd $_
-          cmake ../ivio -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} ${{ matrix.cmake_flags }}
+          cmake ../ivio -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} ${{ matrix.cmake_flags }} -DCMAKE_CXX_FLAGS="--coverage" -DCMAKE_C_FLAGS="--coverage"
 
       - name: Build tests
         run: |
@@ -84,8 +88,13 @@ jobs:
         run: |
           source ${HOME}/.activate_brew
           cd ivio-build
-          gcovr -r ../ivio . --xml -o report.xml -e ../ivio/lib
+          lcov -c --directory . --output coverage.info --gcov ${{ matrix.gcov }}
+          lcov --remove coverage.info '/usr/include/*' --output-file coverage.info
+          lcov --remove coverage.info '/home/linuxbrew/*' --output-file coverage.info
+          lcov --remove coverage.info '*/lib/*' --output-file coverage.info
+          lcov --list coverage.info
+          #gcovr -r ../ivio . --xml -o report.xml -e ../ivio/lib --exclude-noncode-lines --exclude-unreachable-branches --exclude-function-lines
           #gcovr -r ../ . --html --html-details --html-syntax-highlighting -o report.html -e ../lib
           curl -Os https://uploader.codecov.io/latest/linux/codecov
           chmod +x codecov
-          ./codecov -t ${{ secrets.CODECOV }} -f report.xml
+          ./codecov -t ${{ secrets.CODECOV }} -f coverage.info -B ${{ github.ref_name }}
