--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
-[submodule "lib/submodules/cereal"]
-	path = lib/submodules/cereal
+[submodule "lib/cereal"]
+	path = lib/cereal
 	url = https://github.com/USCiLab/cereal
-[submodule "lib/submodules/sdsl-lite"]
-	path = lib/submodules/sdsl-lite
+[submodule "lib/sdsl-lite"]
+	path = lib/sdsl-lite
 	url = https://github.com/xxsds/sdsl-lite
