--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,5 +59,5 @@ jobs:
           cc: ${{ matrix.cc }}
           cxx: ${{ matrix.cxx }}
           cxx_flags: "${{ matrix.cxx_flags }}  -Wextra -Werror"
-          brew_pkgs: "${{ brew_pkgs }}"
+          brew_pkgs: "${{ matrix.brew_pkgs }}"
           build_type: ${{ matrix.build_type }}
