fix: tagging a concrete action version

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,7 +57,7 @@ jobs:
             brew_pkgs: llvm@15
     steps:
       - name: Standard IV-project testing
-        uses: iv-project/IVaction/linux-testing@main
+        uses: iv-project/IVaction/linux-testing@v1
         with:
           name: ${{ matrix.name }}
           cc: ${{ matrix.cc }}
