feat: adding some minor docu stuff

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,19 +2,20 @@ site_name: IVio
 docs_dir: docs
 nav:
   - index.md
-  - benchmarks.md
   - C++ API-Reference:
     - "formats-fasta.md"
     - "formats-vcf.md"
 use_directory_urls: false
 repo_url: https://github.com/iv-project/IVio
 theme:
-  name: readthedocs
-  custom_dir: docs/readthedocs-customization
+  name: material
+#  custom_dir: docs/readthedocs-customization
   highlightjs: true
   collapse_navigation: false
   locale: en
   prev_next_buttons_location: none
+  features:
+  - content.code.copy
 extra_javascript:
   - extra-highlights.js
 plugins:
@@ -32,11 +33,13 @@ markdown_extensions:
 #  - sane_lists
 #  - smarty
   - pymdownx.highlight:
+      anchor_linenums: true
+      line_spans: __span
       pygments_lang_class: true
   - pymdownx.inlinehilite
   - attr_list
-#  - pymdownx.snippets
-#  - pymdownx.superfences
+  - pymdownx.snippets
+  - pymdownx.superfences
 #  - pymdownx.critic
 #  - pymdownx.caret
 #  - pymdownx.keys
