--- a/.github/workflows/ci_license_check.yml
+++ b/.github/workflows/ci_license_check.yml
@@ -12,9 +12,11 @@ on:
   workflow_dispatch:
 
 jobs:
-  test:
+  license_check:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
     - name: REUSE Compliance Check
       uses: fsfe/reuse-action@v2
+      with:
+        args: --suppress-deprecation lint
