--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,49 +23,14 @@ jobs:
       fail-fast: false
       matrix:
         osname: ["Ubuntu 22.04"]
-        compiler: ["gcc13 (c++20)", "gcc12 (c++20)", "gcc11 (c++20)", "gcc13 (c++20, Debug)", "clang15"]
+        compiler: ["gcc13-cpp20-release", "gcc12-cpp20-release", "gcc11-cpp20-release", "gcc13-cpp20-debug", "clang15-cpp20-release", "clang16-cpp20-release"]
         include:
           - osname: "Ubuntu 22.04"
             os: ubuntu-22.04
-            cmake_flags: ""
             threads: 2
-
-          - compiler: "gcc13 (c++20)"
-            cxx: "g++-13"
-            cc: "gcc-13"
-            build_type: Release
-            brew_pkgs: gcc@13
-
-          - compiler: "gcc12 (c++20)"
-            cxx: "g++-12"
-            cc: "gcc-12"
-            build_type: Release
-            brew_pkgs: gcc@12
-
-          - compiler: "gcc11 (c++20)"
-            cxx: "g++-11"
-            cc: "gcc-11"
-            build_type: Release
-            brew_pkgs: gcc@11
-
-          - compiler: "gcc13 (c++20, Debug)"
-            cxx: "g++-13"
-            cc: "gcc-13"
-            build_type: Debug
-            brew_pkgs: gcc@13
-
-          - compiler: "clang15"
-            cxx: "clang++"
-            cc: "clang"
-            build_type: Release
-            brew_pkgs: llvm@15
     steps:
       - name: Standard IV-project testing
-        uses: iv-project/IVaction/linux-testing@v2
+        uses: iv-project/IVaction/linux-testing@v3
         with:
           name: ${{ matrix.name }}
-          cc: ${{ matrix.cc }}
-          cxx: ${{ matrix.cxx }}
-          cxx_flags: "${{ matrix.cxx_flags }}"
-          brew_pkgs: "${{ matrix.brew_pkgs }}"
-          build_type: ${{ matrix.build_type }}
+          compiler: ${{ matrix.compiler }}
