--- a/.github/workflows/ci_coverage.yml
+++ b/.github/workflows/ci_coverage.yml
@@ -36,7 +36,7 @@ jobs:
             cc: "gcc-13"
             gcov: "gcov-13"
             build_type: Debug
-            brew_pkgs: gcc@13 lcov
+            brew_pkgs: gcc@13
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
@@ -50,7 +50,7 @@ jobs:
           echo 'eval "$(/home/linuxbrew/.linuxbrew/bin/brew shellenv)"' >> ${HOME}/.activate_brew
           eval "$(/home/linuxbrew/.linuxbrew/bin/brew shellenv)"
           sudo apt-get update -y
-          sudo apt-get install -y build-essential libfmt-dev
+          sudo apt-get install -y build-essential libfmt-dev lcov
           brew install --force-bottle zlib boost cmake fmt pkg-config ${{ matrix.brew_pkgs }}
           ${{ matrix.cxx }} --version
 
