ci: add clang 17

--- a/.github/workflows/ci_linux.yml
+++ b/.github/workflows/ci_linux.yml
@@ -30,6 +30,7 @@ jobs:
           - gcc13-cpp20-lcov
           - clang15-cpp20-release
           - clang16-cpp20-release
+          - clang17-cpp20-release
     steps:
       - name: Standard IV-project testing
         uses: iv-project/IVaction/linux-testing@v5
