feat: test headers of ivio

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,4 +34,5 @@ if (${ROOT_PROJECT})
     enable_testing()
     add_subdirectory(docs/snippets)
     add_subdirectory(src/test_ivio)
+    add_subdirectory(src/test_header)
 endif()
