--- a/.github/workflows/ci_linux.yml
+++ b/.github/workflows/ci_linux.yml
@@ -34,7 +34,7 @@ jobs:
           - clang17-cpp20-release
     steps:
       - name: Standard IV-project testing
-        uses: iv-project/IVaction/linux-testing@feat/more_options
+        uses: iv-project/IVaction/linux-testing@v6.2
         with:
           compiler: ${{ matrix.compiler }}
           threads: 2
