fix: include codecov token, only informational

--- a/.github/workflows/ci_linux.yml
+++ b/.github/workflows/ci_linux.yml
@@ -34,8 +34,7 @@ jobs:
           - clang17-cpp20-release
     steps:
       - name: Standard IV-project testing
-        uses: iv-project/IVaction/linux-testing@v6.2
+        uses: iv-project/IVaction/linux-testing@feat/optional_codecov_token
         with:
           compiler: ${{ matrix.compiler }}
           threads: 2
-          cov_secret: ${{ secrets.CODECOV }}
