--- a/.codecov.yml
+++ b/.codecov.yml
@@ -4,6 +4,7 @@
 
 # See https://docs.codecov.io/docs/codecovyml-reference
 codecov:
+  token: c9700a8e-3544-471c-be62-2de5b744e227
   require_ci_to_pass: no  # codecov reports its results independent of whether CI passed
   notify:
     wait_for_ci: no       # codecov has not to wait until the CI is finished to post its results
@@ -13,8 +14,7 @@ coverage:
     project:  # project is the overall code coverage of the whole codebase
       default:
         if_ci_failed: success # per default, codecov would fail if any CI fails
-        target: auto          # the target coverage, usually the code coverage of the base-branch
-        threshold: 0.02%      # codecov/project fails if there is a drop of more than 0.02%
+        informational: true   # the codecov/patch status is never "fail"
     patch:  # patch is the code-coverage of the changed lines in the PR
       default:
         if_ci_failed: success # per default, codecov would fail if any CI fails
