fix,cmake: prettier selection of ROOT_PROJECT and standard version

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,21 +7,14 @@
 #       In this case we assume this project is compiled for packaging or testing.
 # 2. scenario: another project is adding this directory via "add_subdirectory".
 #       In this case we don't want any tests to be included.
-cmake_minimum_required (VERSION 3.20)
-
-# check if this is the main project
-if (NOT DEFINED PROJECT_NAME)
-    set(ROOT_PROJECT TRUE)
-endif ()
+cmake_minimum_required (VERSION 3.29)
 
 project(ivio LANGUAGES CXX VERSION "${IVIO_PROJECT_VERSION}"
             DESCRIPTION "ivio -- IO library for file formats used in bioinformatics")
 
-if (${ROOT_PROJECT})
-    set(CMAKE_CXX_STANDARD 20)
-    set(CMAKE_CXX_STANDARD_REQUIRED ON)
-    set(CMAKE_CXX_EXTENSIONS OFF)
 
+
+if (PROJECT_IS_TOP_LEVEL)
     if (CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
         set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /bigobj /EHsc -DNOMINMAX")
     elseif (CMAKE_CXX_COMPILER_ID STREQUAL "IntelLLVM")
