--- a/src/ivio/CMakeLists.txt
+++ b/src/ivio/CMakeLists.txt
@@ -16,7 +16,6 @@ add_library(ivio bam/reader.cpp
                  sam/writer.cpp
                  vcf/reader.cpp
                  vcf/writer.cpp)
-
 add_library(ivio::ivio ALIAS ivio)
 
 target_include_directories(ivio
@@ -27,3 +26,4 @@ target_include_directories(ivio
 target_link_libraries(ivio
     ZLIB::ZLIB
 )
+target_compile_features(ivio PUBLIC cxx_std_20)
