--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,22 +19,24 @@ endif()
 project(ivio LANGUAGES CXX VERSION "${IVIO_PROJECT_VERSION}"
             DESCRIPTION "ivio -- IO library for file formats used in bioinformatics")
 
-
-
 if (PROJECT_IS_TOP_LEVEL)
-    if (CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
-        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /bigobj /EHsc -DNOMINMAX")
-    elseif (CMAKE_CXX_COMPILER_ID STREQUAL "IntelLLVM")
-        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Werror -Wpedantic -Wextra -fPIC -fp-model=strict")
-    else()
-        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Werror -Wpedantic -Wextra -fPIC")
-    endif()
+    set(CMAKE_CXX_STANDARD 20)
+    set(CMAKE_CXX_EXTENSIONS OFF)
 endif()
+
 
 include(cmake/CPM.cmake)
 include(ivio-config.cmake)
 
 if (PROJECT_IS_TOP_LEVEL)
+    if (CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
+        target_compile_options(ivio PUBLIC /bigobj /EHsc -DNOMINMAX)
+    elseif (CMAKE_CXX_COMPILER_ID STREQUAL "IntelLLVM")
+        target_compile_options(ivio PUBLIC -Wall -Werror -Wpedantic -Wextra -fPIC -fp-model=strict)
+    else()
+        target_compile_options(ivio PUBLIC -Wall -Werror -Wpedantic -Wextra -fPIC)
+    endif()
+
     CPMaddPackage("gh:fmtlib/fmt#10.1.1")
     CPMaddPackage("gh:catchorg/Catch2#v3.4.0")
 
