patch: include zlib via CPM

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,9 @@ project(ivio LANGUAGES CXX VERSION "${IVIO_PROJECT_VERSION}"
             DESCRIPTION "ivio -- IO library for file formats used in bioinformatics")
 
 include(cmake/CPM.cmake)
+CPMAddPackage("gh:SGSSGene/WrappedCPMAddPackage@0.2.7")
+WrappedCPMAddPackage("https://zlib.net/zlib-1.3.1.tar.gz@1.3.1")
+
 include(ivio-config.cmake)
 
 if (PROJECT_IS_TOP_LEVEL)
