--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,11 +45,12 @@ jobs:
           - {os: windows-2022, compiler: msvc-cpp20-release}
           - {os: windows-2022, compiler: msvc-cpp20-relwithdebinfo-sanitize}
           - {os: windows-2022, compiler: msvc-cpp20-debug}
-          - {os: ubuntu-22.04, compiler: emscripten-cpp20-release, cmake_flags: "-DCMAKE_EXE_LINKER_FLAGS='-fexceptions -sSTACK_SIZE=1000000'", cmake_cxx_flags: "'-Wno-c++11-narrowing -fexceptions'"}
+          - {os: ubuntu-22.04, compiler: emscripten-cpp20-release, cmake_flags: "-DCMAKE_EXE_LINKER_FLAGS='-fexceptions -sSTACK_SIZE=1000000'", cmake_cxx_flags: "-Wno-c++11-narrowing -fexceptions"}
+
 
     steps:
       - name: Standard IV-project testing
-        uses: iv-project/IVaction@v9.12
+        uses: iv-project/IVaction@v9.13
         with:
           compiler: ${{ matrix.compiler }}
           threads: 2
