--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,6 +43,7 @@ jobs:
           - {os: macos-12,     compiler: clang16-cpp20-release}
           - {os: macos-12,     compiler: clang17-cpp20-release}
           - {os: windows-2022, compiler: msvc-cpp20-release}
+          - {os: windows-2022, compiler: msvc-cpp20-relwithdebinfo-sanitize}
           - {os: windows-2022, compiler: msvc-cpp20-debug}
           - {os: ubuntu-22.04, compiler: emscripten-cpp20-release, cmake_flags: "-DCMAKE_EXE_LINKER_FLAGS='-fexceptions -sSTACK_SIZE=1000000'", cmake_cxx_flags: "'-Wno-c++11-narrowing -fexceptions'"}
 
