--- a/src/ivio/CMakeLists.txt
+++ b/src/ivio/CMakeLists.txt
@@ -22,6 +22,7 @@ target_include_directories(ivio
     $<INSTALL_INTERFACE:include>
 )
 target_link_libraries(ivio
+    PUBLIC
     zlib::zlib
 )
 target_compile_features(ivio PUBLIC cxx_std_20)
