--- a/src/test_ivio/CMakeLists.txt
+++ b/src/test_ivio/CMakeLists.txt
@@ -10,6 +10,8 @@ add_executable(${PROJECT_NAME}
     bam_reader.cpp
     bcf_reader.cpp
     bcf_mt_reader.cpp
+    csv_reader.cpp
+    csv_writer.cpp
     fasta_reader.cpp
     fasta_writer.cpp
     faidx_reader.cpp
