--- a/.github/workflows/ci_on_pr.yml
+++ b/.github/workflows/ci_on_pr.yml
@@ -42,12 +42,12 @@ jobs:
           - {os: macos-13,     compiler: clang16-cpp20-release}
           - {os: macos-13,     compiler: clang17-cpp20-release}
           - {os: macos-13,     compiler: clang18-cpp20-release}
+          - {os: macos-14,     compiler: gcc14-cpp20-release}
+          - {os: macos-14,     compiler: clang18-cpp20-release}
           - {os: windows-2022, compiler: msvc-cpp20-release}
           - {os: windows-2022, compiler: msvc-cpp20-relwithdebinfo-sanitize}
           - {os: windows-2022, compiler: msvc-cpp20-debug}
           - {os: ubuntu-22.04, compiler: emscripten-cpp20-release, cmake_flags: "-DCMAKE_EXE_LINKER_FLAGS='-fexceptions -sSTACK_SIZE=1000000'", cmake_cxx_flags: "-Wno-c++11-narrowing -fexceptions"}
-
-
     steps:
       - name: Standard IV-project testing
         uses: iv-project/IVaction@v9.24
