--- a/.github/workflows/ci_on_pr.yml
+++ b/.github/workflows/ci_on_pr.yml
@@ -27,29 +27,29 @@ jobs:
       matrix:
         include:
           - {os: ubuntu-22.04, compiler: spdx_license_lint}
-          - {os: ubuntu-22.04, compiler: gcc13-cpp20-release}
-          - {os: ubuntu-22.04, compiler: gcc14-cpp20-release}
-          - {os: ubuntu-22.04, compiler: gcc15-cpp20-release}
-          - {os: ubuntu-22.04, compiler: gcc15-cpp20-debug-sanitize_address}
-          - {os: ubuntu-22.04, compiler: gcc15-cpp20-debug-sanitize_undefined}
-          - {os: ubuntu-22.04, compiler: gcc15-cpp20-debug-sanitize_thread}
-          - {os: ubuntu-22.04, compiler: gcc15-cpp20-lcov}
-          - {os: ubuntu-22.04, compiler: gcc15-cpp23-release}
-          - {os: ubuntu-22.04, compiler: clang18-cpp20-release}
-          - {os: ubuntu-22.04, compiler: clang19-cpp20-release}
-          - {os: ubuntu-22.04, compiler: clang20-cpp20-release}
-          - {os: macos-13,     compiler: gcc15-cpp20-release}
-          - {os: macos-13,     compiler: clang18-cpp20-release}
-          - {os: macos-13,     compiler: clang19-cpp20-release}
-          - {os: macos-13,     compiler: clang20-cpp20-release}
-          - {os: macos-14,     compiler: gcc15-cpp20-release}
-          - {os: macos-14,     compiler: clang20-cpp20-release}
+          - {os: ubuntu-22.04, compiler: gcc-third-latest-cpp20-release}
+          - {os: ubuntu-22.04, compiler: gcc-second-latest-cpp20-release}
+          - {os: ubuntu-22.04, compiler: gcc-latest-cpp20-release}
+          - {os: ubuntu-22.04, compiler: gcc-latest-cpp20-debug-sanitize_address}
+          - {os: ubuntu-22.04, compiler: gcc-latest-cpp20-debug-sanitize_undefined}
+          - {os: ubuntu-22.04, compiler: gcc-latest-cpp20-debug-sanitize_thread}
+          - {os: ubuntu-22.04, compiler: gcc-latest-cpp20-lcov}
+          - {os: ubuntu-22.04, compiler: gcc-latest-cpp23-release}
+          - {os: ubuntu-22.04, compiler: clang-third-latest-cpp20-release}
+          - {os: ubuntu-22.04, compiler: clang-second-latest-cpp20-release}
+          - {os: ubuntu-22.04, compiler: clang-latest-cpp20-release}
+          - {os: macos-13,     compiler: gcc-latest-cpp20-release}
+          - {os: macos-13,     compiler: clang-third-latest-cpp20-release}
+          - {os: macos-13,     compiler: clang-second-latest-cpp20-release}
+          - {os: macos-13,     compiler: clang-latest-cpp20-release}
+          - {os: macos-14,     compiler: gcc-latest-cpp20-release}
+          - {os: macos-14,     compiler: clang-latest-cpp20-release}
           - {os: windows-2022, compiler: msvc-cpp20-release}
           - {os: windows-2022, compiler: msvc-cpp20-debug}
           - {os: ubuntu-22.04, compiler: emscripten-cpp20-release, cmake_flags: "-DCMAKE_EXE_LINKER_FLAGS='-fexceptions -sSTACK_SIZE=1000000'", cmake_cxx_flags: "-Wno-c++11-narrowing -fexceptions"}
     steps:
       - name: Standard IV-project testing
-        uses: iv-project/IVaction@v10.9
+        uses: iv-project/IVaction@v11.0
         with:
           compiler: ${{ matrix.compiler }}
           threads: 2
