--- a/.github/workflows/ci_on_pr.yml
+++ b/.github/workflows/ci_on_pr.yml
@@ -26,27 +26,27 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - {os: ubuntu-22.04, compiler: spdx_license_lint}
-          - {os: ubuntu-22.04, compiler: gcc-third-latest-cpp20-release}
-          - {os: ubuntu-22.04, compiler: gcc-second-latest-cpp20-release}
-          - {os: ubuntu-22.04, compiler: gcc-latest-cpp20-release}
-          - {os: ubuntu-22.04, compiler: gcc-latest-cpp20-debug-sanitize_address}
-          - {os: ubuntu-22.04, compiler: gcc-latest-cpp20-debug-sanitize_undefined}
-          - {os: ubuntu-22.04, compiler: gcc-latest-cpp20-debug-sanitize_thread}
-          - {os: ubuntu-22.04, compiler: gcc-latest-cpp20-lcov}
-          - {os: ubuntu-22.04, compiler: gcc-latest-cpp23-release}
-          - {os: ubuntu-22.04, compiler: clang-third-latest-cpp20-release}
-          - {os: ubuntu-22.04, compiler: clang-second-latest-cpp20-release}
-          - {os: ubuntu-22.04, compiler: clang-latest-cpp20-release}
-          - {os: macos-13,     compiler: gcc-latest-cpp20-release}
-          - {os: macos-13,     compiler: clang-third-latest-cpp20-release}
-          - {os: macos-13,     compiler: clang-second-latest-cpp20-release}
-          - {os: macos-13,     compiler: clang-latest-cpp20-release}
-          - {os: macos-14,     compiler: gcc-latest-cpp20-release}
-          - {os: macos-14,     compiler: clang-latest-cpp20-release}
-          - {os: windows-2022, compiler: msvc-cpp20-release}
-          - {os: windows-2022, compiler: msvc-cpp20-debug}
-          - {os: ubuntu-22.04, compiler: emscripten-cpp20-release, cmake_flags: "-DCMAKE_EXE_LINKER_FLAGS='-fexceptions -sSTACK_SIZE=1000000'", cmake_cxx_flags: "-Wno-c++11-narrowing -fexceptions"}
+          - {os: ubuntu-22.04,   compiler: spdx_license_lint}
+          - {os: ubuntu-22.04,   compiler: gcc-third-latest-cpp20-release}
+          - {os: ubuntu-22.04,   compiler: gcc-second-latest-cpp20-release}
+          - {os: ubuntu-22.04,   compiler: gcc-latest-cpp20-release}
+          - {os: ubuntu-22.04,   compiler: gcc-latest-cpp20-debug-sanitize_address}
+          - {os: ubuntu-22.04,   compiler: gcc-latest-cpp20-debug-sanitize_undefined}
+          - {os: ubuntu-22.04,   compiler: gcc-latest-cpp20-debug-sanitize_thread}
+          - {os: ubuntu-22.04,   compiler: gcc-latest-cpp20-lcov}
+          - {os: ubuntu-22.04,   compiler: gcc-latest-cpp23-release}
+          - {os: ubuntu-22.04,   compiler: clang-third-latest-cpp20-release}
+          - {os: ubuntu-22.04,   compiler: clang-second-latest-cpp20-release}
+          - {os: ubuntu-22.04,   compiler: clang-latest-cpp20-release}
+          - {os: macos-15-intel, compiler: gcc-latest-cpp20-release}
+          - {os: macos-15-intel, compiler: clang-third-latest-cpp20-release}
+          - {os: macos-15-intel, compiler: clang-second-latest-cpp20-release}
+          - {os: macos-15-intel, compiler: clang-latest-cpp20-release}
+          - {os: macos-14,       compiler: gcc-latest-cpp20-release}
+          - {os: macos-14,       compiler: clang-latest-cpp20-release}
+          - {os: windows-2022,   compiler: msvc-cpp20-release}
+          - {os: windows-2022,   compiler: msvc-cpp20-debug}
+          - {os: ubuntu-22.04,   compiler: emscripten-cpp20-release, cmake_flags: "-DCMAKE_EXE_LINKER_FLAGS='-fexceptions -sSTACK_SIZE=1000000'", cmake_cxx_flags: "-Wno-c++11-narrowing -fexceptions"}
     steps:
       - name: Standard IV-project testing
         uses: iv-project/IVaction@v11.1
